Fix image 404s, color contrast, and canonical URL

--- a/index.css
+++ b/index.css
@@ -4292,7 +4292,7 @@ footer::before {
 }
 
 .copyright {
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 0.85);
   font-size: var(--fs-8);
   font-weight: var(--weight-500);
   text-transform: capitalize;
@@ -6359,7 +6359,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .header-alert-news b {
-  color: var(--salmon-pink);
+  color: var(--color-primary-light);
   font-weight: var(--weight-600);
 }
 
